# k3s_agent

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  MANUAL.md  Makefile  README.md  docker-compose.yml  k3sctl-spec.md  pyproject.toml  run.sh
k3sctl/: __init__.py  app.py  config.py  context.py  diagnose.py  engine.py  history.py  memory.py  prompts.py  safety.py
k3sctl/tools/: __init__.py  base.py  file_read_tool.py  helm_tool.py  kubectl_tool.py  remember_tool.py  shell_tool.py
k3sctl/ui/: __init__.py  confirm.py  conversation.py  history_view.py  memory_view.py  statusbar.py  tools_view.py
tests/: test_context.py  test_engine.py  test_safety.py  test_tools.py  test_ui.py
